[APPDEV-3512] Fix header spacing in fixed popup
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@26124 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/fixedpopup.css
+++ b/projects/Media/docroot/assets/css/common/fixedpopup.css
@@ -56,7 +56,6 @@
 }
 
 #ifrPopup .qs-popup-header {
-  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -66,7 +65,7 @@
 }
 
 #ifrPopup .qs-popup-content {
-  padding: 10px;
+  padding: 0 10px 10px;
 }
 
 #ajaxpopup .ajaxpopup-body {
